--- a/gptbot/public/GPT-Bot-Site.css
+++ b/gptbot/public/GPT-Bot-Site.css
@@ -1,4 +1,30 @@
- .u-section-1 {
+li.message {
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+  list-style: none;
+}
+
+li.user-message {
+  background-color: #f5f5f5;
+}
+li.assistant-message {
+  background-color: #979797;
+}
+
+.scrollable {
+  overflow-y: scroll;
+  height: 400px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.hidden {
+  display: none;
+}
+
+/* ------------------------------------ */
+.u-section-1 {
   min-height: 550px;
 }
 
@@ -41,7 +67,7 @@
 .u-section-1 .u-form-2 {
   height: 108px;
   width: 560px;
-  margin: 353px 0 0;
+  margin: 0 0 2% 0;
 }
 
 @media (max-width: 1199px) {
